# go2_hesai_xt16_fast_lio

./: .gitignore  README.md  src_tree.txt  src_tree_middle.txt  tree.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/go2_bringup/share/go2_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_description/share/go2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_driver/include/go2_driver/: go2_api_id.hpp  go2_driver.hpp
install/go2_driver/share/go2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/go2_hardware/share/go2_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
scripts/: record_mapping.sh
src/: frames.gv  imu_test  imu_test.cpp
src/FAST_LIO_ROS2/: package.xml
src/FAST_LIO_ROS2/config/: velodyne.yaml
src/FAST_LIO_ROS2/launch/: mapping.launch (copy).py
src/FAST_LIO_ROS2/rviz/: fastlio.rviz
src/FAST_LIO_ROS2/src/: laserMapping (copy).cpp  laserMapping.cpp  preprocess (copy).cpp  preprocess (copy).h
src/HesaiLidar_ROS_2.0/config/: config.yaml
src/HesaiLidar_ROS_2.0/launch/: start.py
src/go2_robot/go2_slam/: package.xml  setup.cfg  setup.py
src/lidar_3d_bbox/: package.xml  setup.cfg  setup.py
src/lidar_3d_bbox/launch/: lidar_3d_bbox_node.launch.py
src/lidar_3d_bbox/lidar_3d_bbox/: lidar_3d_bbox_node.py
src/lidar_3d_bbox/rviz/: lidar_3d_bbox.rviz
(+962 files in other folders)
